# barcode_generator

./: Cargo.toml  README.md  README_ja.md  command.bat
src/: main.rs
